@@ -294,11 +294,9 @@ Mode::Mode(Configuration * conf, int confindex, int dsindex, int recordedbandcha
     /*cout << "subfracsamparg is " << subfracsamparg << endl;
     cout << "subfracsampsin is " << subfracsampsin << endl;
     cout << "subfracsampcos is " << subfracsampcos << endl;
-    cout << "subchannelfreqs is " << subchannelfreqs << endl;
-    cout << "lsbsubchannelfreqs is " << lsbsubchannelfreqs << endl;*/
+    cout << "subchannelfreqs is " << subchannelfreqs << endl; */
     for(int i=0;i<arraystridelength;i++) {
       subchannelfreqs[i] = (float)((TWO_PI*(i)*recordedbandwidth)/recordedbandchannels);
-      //lsbsubchannelfreqs[i] = (float)((-TWO_PI*(arraystridelength-(i+1))*recordedbandwidth)/recordedbandchannels);
     }
 
     stepfracsamparg = vectorAlloc_f32(numfracstrides/2);
@@ -311,7 +309,7 @@ Mode::Mode(Configuration * conf, int confindex, int dsindex, int recordedbandcha
 
     for(int i=0;i<numfracstrides/2;i++) {
       stepchannelfreqs[i] = (float)((TWO_PI*i*arraystridelength*recordedbandwidth)/recordedbandchannels);
-      lsbstepchannelfreqs[i] = (float)((-TWO_PI*((numfracstrides/2-i)*arraystridelength-1)*recordedbandwidth)/recordedbandchannels);
+      lsbstepchannelfreqs[i] = (float)((-TWO_PI*((numfracstrides/2-i)*arraystridelength)*recordedbandwidth)/recordedbandchannels);
     }
 
     deltapoloffsets = false;
@@ -544,7 +542,6 @@ Mode::~Mode()
   vectorFree(subfracsampsin);
   vectorFree(subfracsampcos);
   vectorFree(subchannelfreqs);
-  //vectorFree(lsbsubchannelfreqs);
 
   vectorFree(stepfracsamparg);
   vectorFree(stepfracsampsin);
@@ -638,7 +635,7 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
 {
   double phaserotation, averagedelay, nearestsampletime, starttime, lofreq, walltimesecs, fracwalltime, fftcentre, d0, d1, d2, fraclooffset;
   f32 phaserotationfloat, fracsampleerror;
-  int status, count, nearestsample, integerdelay, acoffset, RcpIndex, LcpIndex, freqindex, intwalltime;
+  int status, count, nearestsample, integerdelay, RcpIndex, LcpIndex, intwalltime;
   cf32* fftptr;
   cf32 *fracsampptr1A, *fracsampptr2A, *fracsampptr1B, *fracsampptr2B;
   f32* currentstepchannelfreqs;
@@ -793,7 +790,6 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
     //updated so that Nyquist channel is not accumulated for either USB or LSB data
     //and is excised entirely, so both USB and LSB data start at the same place (no sidebandoffset)
     currentstepchannelfreqs = stepchannelfreqs;
-    acoffset = 0;
     fracsampptr1A = &(fracsamprotatorA[0]);
     fracsampptr2A = &(fracsamprotatorA[arraystridelength]);
     if (deltapoloffsets) {
@@ -803,11 +799,6 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
     if(config->getDRecordedLowerSideband(configindex, datastreamindex, i))
     {
       currentstepchannelfreqs = lsbstepchannelfreqs;
-      freqindex = config->getDRecordedFreqFreqTableIndex(configindex, datastreamindex, i);
-      if(config->getFreqTableCorrelatedAgainstUpper(freqindex))
-      {
-        acoffset++;
-      }
     }
 
     looff = false;
@@ -1092,14 +1083,14 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
             if (usecomplex) {
               status = vectorMul_cf32(complexrotator, &unpackedcomplexarrays[j][nearestsample - unpackstartsamples], complexunpacked, fftchannels);
               if (status != vecNoErr)
-                csevere << startl << "Error in real->complex conversion" << endl;
+                csevere << startl << "Error in complex fringe rotation" << endl;
             } else {
               status = vectorRealToComplex_f32(&(unpackedarrays[j][nearestsample - unpackstartsamples]), NULL, complexunpacked, fftchannels);
               if (status != vecNoErr)
                 csevere << startl << "Error in real->complex conversion" << endl;
               status = vectorMul_cf32_I(complexrotator, complexunpacked, fftchannels);
-              //if(status != vecNoErr)
-              //	csevere << startl << "Error in fringe rotation!!!" << status << endl;
+              if(status != vecNoErr)
+              	csevere << startl << "Error in fringe rotation!!!" << status << endl;
             }
             if(isfft) {
               status = vectorFFT_CtoC_cf32(complexunpacked, fftd, pFFTSpecC, fftbuffer);
@@ -1115,15 +1106,14 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
             if(config->getDRecordedLowerSideband(configindex, datastreamindex, i)) {
 	      if (usecomplex) {
 		if (usedouble) {
-		  status = vectorFlip_cf32(fftd, fftoutputs[j][subloopindex], recordedbandchannels/2);
-		  status = vectorFlip_cf32(&fftd[recordedbandchannels/2], &fftoutputs[j][subloopindex][recordedbandchannels/2], recordedbandchannels/2);
+		  status = vectorFlip_cf32(fftd, fftoutputs[j][subloopindex], recordedbandchannels/2+1);
+		  status = vectorFlip_cf32(&fftd[recordedbandchannels/2]+1, &fftoutputs[j][subloopindex][recordedbandchannels/2]+1, recordedbandchannels/2-1);
 		} else {
               status = vectorCopy_cf32(&(fftd[1]), fftoutputs[j][subloopindex], recordedbandchannels - 1);
               fftoutputs[j][subloopindex][recordedbandchannels - 1] = fftd[0];
               }
 	      } else {
-		status = vectorCopy_cf32(&(fftd[recordedbandchannels + 1]), fftoutputs[j][subloopindex], recordedbandchannels - 1);
-		fftoutputs[j][subloopindex][recordedbandchannels - 1] = fftd[0];
+		status = vectorCopy_cf32(&(fftd[recordedbandchannels]), fftoutputs[j][subloopindex], recordedbandchannels);
 	      }
             }
             else {
@@ -1172,8 +1162,8 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
           csevere << startl << "Error in conjugate!!!" << status << endl;
 
 	if (!linear2circular) {
-	  //do the autocorrelation (skipping Nyquist channel - if any LSB * USB correlations, shift all LSB bands to appear as USB)
-	  status = vectorAddProduct_cf32(fftoutputs[j][subloopindex]+acoffset, conjfftoutputs[j][subloopindex]+acoffset, autocorrelations[0][j]+acoffset, recordedbandchannels-acoffset);
+	  //do the autocorrelation (skipping Nyquist channel)
+	  status = vectorAddProduct_cf32(fftoutputs[j][subloopindex], conjfftoutputs[j][subloopindex], autocorrelations[0][j], recordedbandchannels);
 	  if(status != vecNoErr)
 	    csevere << startl << "Error in autocorrelation!!!" << status << endl;
 
@@ -1228,10 +1218,10 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
 
       //if we need to, do the cross-polar autocorrelations
       if(calccrosspolautocorrs) {
-	status = vectorAddProduct_cf32(fftoutputs[indices[0]][subloopindex]+acoffset, conjfftoutputs[indices[1]][subloopindex]+acoffset, autocorrelations[1][indices[0]]+acoffset, recordedbandchannels-acoffset);
+	status = vectorAddProduct_cf32(fftoutputs[indices[0]][subloopindex], conjfftoutputs[indices[1]][subloopindex], autocorrelations[1][indices[0]], recordedbandchannels);
 	if(status != vecNoErr)
 	  csevere << startl << "Error in cross-polar autocorrelation!!!" << status << endl;
-	status = vectorAddProduct_cf32(fftoutputs[indices[1]][subloopindex]+acoffset, conjfftoutputs[indices[0]][subloopindex]+acoffset, autocorrelations[1][indices[1]]+acoffset, recordedbandchannels-acoffset);
+	status = vectorAddProduct_cf32(fftoutputs[indices[1]][subloopindex], conjfftoutputs[indices[0]][subloopindex], autocorrelations[1][indices[1]], recordedbandchannels);
 	if(status != vecNoErr)
 	  csevere << startl << "Error in cross-polar autocorrelation!!!" << status << endl;
       
@@ -1243,8 +1233,8 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
     
     if (linear2circular) {// Delay this as it is possible for linear2circular to be active, but just one pol present
       for (int k=0; k<count; k++) {
-	//do the autocorrelation (skipping Nyquist channel - if any LSB * USB correlations, shift all LSB bands to appear as USB)
-	status = vectorAddProduct_cf32(fftoutputs[indices[k]][subloopindex]+acoffset, conjfftoutputs[indices[k]][subloopindex]+acoffset, autocorrelations[0][indices[k]]+acoffset, recordedbandchannels-acoffset);
+	//do the autocorrelation (skipping Nyquist channel)
+	status = vectorAddProduct_cf32(fftoutputs[indices[k]][subloopindex], conjfftoutputs[indices[k]][subloopindex], autocorrelations[0][indices[k]], recordedbandchannels);
 	if(status != vecNoErr)
 	  csevere << startl << "Error in autocorrelation!!!" << status << endl;
 
